CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(EXTH-DEMOS_PROJECT ExTh-Demos)
MESSAGE(STATUS "Building ExTh-Demos")
Project(${EXTH-DEMOS_PROJECT} CXX)

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
ENDIF()

SET(EXTH-DEMOS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "ExTh-Demos src dir: ${EXTH-DEMOS_SRC_DIR}")
SET(EXTH-DEMOS_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "ExTh-Demos bin dir: ${EXTH-DEMOS_BIN_DIR}")
SET(EXTH-DEMOS_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)

ADD_EXECUTABLE(${EXTH-DEMOS_PROJECT} ${EXTH-DEMOS_SRC_FILES})
TARGET_LINK_LIBRARIES(${EXTH-DEMOS_PROJECT} ${EXTH-DEMOS_LIBRARIES})
QT5_USE_MODULES(${EXTH-DEMOS_PROJECT} ${EXTH-DEMOS_QT_MODULES})
INCLUDE_DIRECTORIES(${EXTH-DEMOS_INCLUDE_DIRS})
